// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TimeSlotItem /> matches snapshot for available slot 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#E8F5E9",
      "borderRadius": 8,
      "margin": 4,
      "minWidth": 110,
      "opacity": 1,
      "paddingHorizontal": 14,
      "paddingVertical": 10,
    }
  }
  testID="time-slot-item"
>
  <Text
    style={
      [
        {
          "color": "#2E7D32",
          "fontSize": 14,
          "fontWeight": "500",
        },
        false,
      ]
    }
    testID="time-slot-text"
  >
    09:00
     - 
    09:30
  </Text>
</View>
`;

exports[`<TimeSlotItem /> matches snapshot for booked slot 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#EEEEEE",
      "borderRadius": 8,
      "margin": 4,
      "minWidth": 110,
      "opacity": 1,
      "paddingHorizontal": 14,
      "paddingVertical": 10,
    }
  }
  testID="time-slot-item"
>
  <Text
    style={
      [
        {
          "color": "#2E7D32",
          "fontSize": 14,
          "fontWeight": "500",
        },
        {
          "color": "#999",
        },
      ]
    }
    testID="time-slot-text"
  >
    09:00
     - 
    09:30
  </Text>
  <Text
    style={
      {
        "color": "#999",
        "fontSize": 11,
        "marginTop": 2,
      }
    }
    testID="booked-label"
  >
    Booked
  </Text>
</View>
`;
